Fixed height on p fixes weird jumping on carousel interaction

--- a/styles/style.css
+++ b/styles/style.css
@@ -95,6 +95,9 @@ h3{
   all: unset;
   font-size: inherit;
 }
+p{
+  height: 120px;
+}
 button:active { border-style: none;}
 #circle.circle {
   position: absolute;
